Removed unneccessary footer elements

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     </div>
 
     <footer class="animate__animated animate__fadeIn">
-        <p>&copy; Nepal Forestry Department, 2025 | The Tree of Life</p>
+        <p>&copy; Nepal Forestry Department, 2025</p>
     </footer>
     
 </body>
