changes from msg

--- a/index.html
+++ b/index.html
@@ -255,37 +255,26 @@
             <tr><td>Local Name (Nepali)</td><td>निमको रुख (Nimko Rukh)</td></tr>
             <tr><td>Botanical Name</td><td><i>Azadirachta indica</i></td></tr>
             <tr><td>Family</td><td>Mahogany family (Meliaceae)</td></tr>
-            <tr><td>Origin</td><td>India, Bangladesh, Pakistan, Indian subcontinent</td></tr>
         </table>
 
         <div class="section-title">Benefits & Uses</div>
         <table>
             <tr><th>Attribute</th><th>Details</th></tr>
-            <tr><td>Medicinal Properties</td><td>Antibacterial, antiviral, antifungal, anti-inflammatory, and more</td></tr>
-            <tr><td>Traditional Uses</td><td>Used in Ayurveda for skin diseases, fever, dental care, and diabetes</td></tr>
-            <tr><td>Agricultural Uses</td><td>Natural pesticide (neem oil), soil enricher, and fertilizer</td></tr>
-            <tr><td>Cultural Significance</td><td>Purifies air, prevents soil erosion, natural pest repellent, Spiritual and medicinal, revered in Hindu culture</td></tr>
-            <tr><td>Modern Applications</td><td>Used in cosmetics, soaps, toothpaste, and pet care products</td></tr>
+            <tr><td>Significance</td><td>Purifies air, prevents soil erosion, natural pest repellent, Spiritual and medicinal, revered in Hindu culture</td></tr>
         </table>
 
         <div class="section-title">Characteristics</div>
         <table>
             <tr><th>Attribute</th><th>Details</th></tr>
-            <tr><td>Growth Rate</td><td>Fast-growing (can reach 15-20m in 3-5 years)</td></tr>
-            <tr><td>Lifespan</td><td>150-200 years</td></tr>
-            <tr><td>DBH (Diameter at Breast Height)</td><td>Up to 1.5m in mature trees</td></tr>
-            <tr><td>Height</td><td>15-20m (can reach up to 30m in ideal conditions)</td></tr>
-            <tr><td>Leaves</td><td>Pinnate, 20-40cm long with 20-31 leaflets</td></tr>
-            <tr><td>Flowers</td><td>Small, white, fragrant, arranged in drooping axillary panicles</td></tr>
-            <tr><td>Fruit</td><td>Olive-like drupe, yellow when ripe</td></tr>
-            <tr><td>Climate</td><td>Thrives in tropical and subtropical climates</td></tr>
-            <tr><td>GPS co-ordinate</td><td>To be collected in the field</td></tr>
+            <tr><td>DBH (Diameter at Breast Height) (cm)</td><td>to be filled</td></tr>
+            <tr><td>Height(m)</td><td>to be filled</td></tr>
+            <tr><td>GPS co-ordinate (UTM)</td><td>To be filled</td></tr>
         </table>
     </div>
 
     <footer class="animate__animated animate__fadeIn">
-        <p>&copy; Nepal Forestry Department, 2025</p>
+        <p>&copy; DFO (Division Forest Office), 2025</p>
     </footer>
-    
+
 </body>
 </html>
