--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     </div>
 
     <footer class="animate__animated animate__fadeIn">
-        <p>&copy; DFO (Division Forest Office), 2025</p>
+        <p>&copy; DFO (Division Forest Office), Kathmandu, 2025</p>
     </footer>
 
 </body>
